# singer-rust

./: .changie.yaml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.changes/: v0.0.1-a1.md  v0.0.1-a2.md  v0.0.1-a3.md  v0.0.1-a4.md  v0.0.1-a5.md  v0.0.1-a6.md  v0.0.1-alpha.md
.changes/unreleased/: Added-20230414-165716.yaml  Fixed-20231020-142358.yaml  Fixed-20231109-115410.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  gen-release-pr.yml  test.yml
resources/: example.singer
singer_arrow/: Cargo.toml
singer_arrow/src/: lib.rs  sink.rs  target.rs
singer_rust/: Cargo.toml  README.md
singer_rust/src/: lib.rs
singer_rust/src/message/: io.rs  mod.rs  types.rs
singer_summarize/: Cargo.toml  README.md  pyproject.toml
singer_summarize/src/: cli.rs  lib.rs
