[package]
name = "singer_arrow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Apache Arrow integration for Singer taps and targets"
license = "MIT"

[dependencies]
arrow = { version = "47.0.0", features = ["prettyprint"] }
arrow-schema = "47.0.0"
arrow-array = "47.0.0"
arrow-json = "47.0.0"
parquet = { version = "47.0.0", features = ["arrow"] }
singer_rust = { path = "../singer_rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10.1"
