[package]
name = "singer_rust"
version = "0.0.1"
edition = {workspace = true}
rust-version = { workspace = true }
documentation = "https://github.com/edgarrmondragon/singer-rust"
homepage = "https://github.com/edgarrmondragon/singer-rust"
repository = "https://github.com/edgarrmondragon/singer-rust"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
