[package]
name = "singer_summarize"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://github.com/edgarrmondragon/singer-rust"
homepage = "https://github.com/edgarrmondragon/singer-rust"
repository = "https://github.com/edgarrmondragon/singer-rust"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "singer-summarize"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = "1.0.196"
serde_json = "1.0.114"
singer_rust = { path = "../singer_rust" }
