[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[project]
name = "singer_summarize"
version = "0.0.1-a6"
description = "Singer target that summarizes a tap's output"
authors = [{ name = "Edgar Ramirez", email = "edgarrm358@gmail.com" }]
maintainers = [{ name = "Edgar Ramirez", email = "edgarrm358@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["singer.io", "target"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]
urls = { repository = "https://github.com/edgarrmondragon/singer-rust" }

[tool.maturin]
bindings = "bin"
strip = true
